fix: fixed the notification messages, added a check if the commet in the notification is approved so if it is still not approved the notification will not be visible to the user, also included notifications for when your recipe or comment has been approved

--- a/frontend/src/components/bars/notificationbar/notificationbar.css
+++ b/frontend/src/components/bars/notificationbar/notificationbar.css
@@ -41,7 +41,7 @@
     gap: 10px;
     margin-bottom: 30px;
     margin-left: 55px;
-    direction: rtl;
+    direction: ltr;
     margin-top: 0;
 }
 
